Fix swagger to make functional requests
