# pkg/controllers/controller.go
@@ -39,15 +39,16 @@ func GetRoutes(c *fiber.Ctx) error {
 
 // GetContactById func retrieves a contact by given id.
 // @Description  Retrieve a contact's data.
+// @Param        Authorization  header  string  true  "Insert your access token"
 // @Summary      Retrieve a contact
 // @Tags         Contacts
 // @Accept       json
 // @Produce      json
-// @Param        id   path      string  true  "Contact Id"
+// @Param        id       path      string                        true  "Contact Id"
 // @Success      200  {object}  models.Contact
-// @Failure      400  {object}  models.DefaultError
-// @Failure      404  {object}  models.DefaultError
-// @Router       /contacts/:id [get]
+// @Failure      400      {object}  models.DefaultError
+// @Failure      404      {object}  models.DefaultError
+// @Router       /contacts/{id} [get]
 func GetContactById(c *fiber.Ctx) error {
 	id := c.Params("id")
 
@@ -68,6 +69,7 @@ func GetContactById(c *fiber.Ctx) error {
 
 // GetContactsByQuery func retrieve contacts by given query parameters.
 // @Description  Search contacts.
+// @Param        Authorization  header  string  true  "Insert your access token"
 // @Summary      Search contacts.
 // @Tags         Contacts
 // @Accept       json
@@ -100,14 +102,16 @@ func GetContactsByQuery(c *fiber.Ctx) error {
 
 // CreateContact func Creates a contact.
 // @Description  Creates a contact.
+// @Param        Authorization  header  string  true  "Insert your access token"
 // @Summary      Creates a contact.
 // @Tags         Contacts
 // @Accept       json
 // @Produce      json
-// @Success      201  {object}  models.Contact
-// @Failure      400  {object}  models.DefaultError
-// @Failure      422  {object}  models.DefaultError
-// @Failure      500  {object}  models.DefaultError
+// @Param        contact  body      models.CreateContact_Request  true  "Contact info"
+// @Success      201      {object}  models.Contact
+// @Failure      400      {object}  models.DefaultError
+// @Failure      422      {object}  models.DefaultError
+// @Failure      500      {object}  models.DefaultError
 // @Router       /contacts [post]
 func CreateContact(c *fiber.Ctx) error {
 	body := new(models.CreateContact_Request)
@@ -128,16 +132,18 @@ func CreateContact(c *fiber.Ctx) error {
 
 // UpdateContact func Update a contact.
 // @Description  Update a contact.
+// @Param        Authorization  header  string  true  "Insert your access token"
 // @Summary      Update a contact.
 // @Tags         Contacts
 // @Accept       json
 // @Produce      json
 // @Param        id   path      string  true  "Contact Id"
-// @Success      201  {object}  models.Contact
+// @Param        contact  body      models.CreateContact_Request  false  "Contact info"
+// @Success      201      {object}  models.Contact
 // @Failure      400  {object}  models.DefaultError
 // @Failure      404  {object}  models.DefaultError
-// @Failure      422  {object}  models.DefaultError
-// @Router       /contacts/:id [put]
+// @Failure      422      {object}  models.DefaultError
+// @Router       /contacts/{id} [put]
 func UpdateContact(c *fiber.Ctx) error {
 	id := c.Params("id")
 	body := new(models.CreateContact_Request)
@@ -172,6 +178,7 @@ func UpdateContact(c *fiber.Ctx) error {
 
 // DeleteContact func Delete a contact.
 // @Description  Delete a contact.
+// @Param        Authorization  header  string  true  "Insert your access token"
 // @Summary      Delete a contact.
 // @Tags         Contacts
 // @Accept       json
@@ -181,7 +188,7 @@ func UpdateContact(c *fiber.Ctx) error {
 // @Failure      400  {object}  models.DefaultError
 // @Failure      404  {object}  models.DefaultError
 // @Failure      500  {object}  models.DefaultError
-// @Router       /contacts/:id [delete]
+// @Router       /contacts/{id} [delete]
 func DeleteContact(c *fiber.Ctx) error {
 	id := c.Params("id")
 
